--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -2,9 +2,13 @@
     background-color: rgb(89, 108, 114);
 }
 
+.nav-item {
+    margin-left: 15px;
+}
+
 .navbar-item-border {
     display: inline-block;
     position: relative;
-    border-bottom: 0.1px solid rgb(238, 232, 232);
+    border-bottom: 0.1px solid rgb(126, 139, 144);
 }
 
