--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.underbordered-text {
+  display: inline-block;
+  position: relative;
+  border-bottom: 0.1px solid rgb(238, 232, 232);
+}
+
+.roundedBorder {
+  border-radius: 25px;
+  border: 2px solid rgb(196, 22, 28);
+}
+
+.bg-gray {
+  background-color: rgb(206, 205, 205)
+}
