--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -1,15 +1,20 @@
 .button {
-    background-color:  rgb(196, 22, 28) !important;
-    border-color: rgb(196, 22, 28) !important;
-    padding: 15px 20px 15px 20px !important;
-    box-shadow: 0px 2px 15px gray;
-  }
-  
-  .textField {
-    padding: 3px 12px 3px 12px !important;
-  }
+  background-color: rgb(196, 22, 28) !important;
+  border-color: rgb(196, 22, 28) !important;
+  padding: 15px 20px 15px 20px !important;
+  box-shadow: 0px 2px 15px gray;
+}
 
-  .textField:disabled {
-    background-color: rgb(206, 205, 205) !important;
-    border-color: rgb(206, 205, 205) !important;
-  }
+.textField {
+  padding: 3px 12px 3px 12px !important;
+}
+
+.textField:disabled {
+  background-color: rgb(206, 205, 205) !important;
+  border-color: rgb(206, 205, 205) !important;
+}
+
+div.custom{
+  border-radius: 25px;
+  border: 2px solid rgb(196, 22, 28) !important;
+}
