--- a/src/style.css
+++ b/src/style.css
@@ -21,3 +21,15 @@ code {
 .bg-gray {
   background-color: rgb(206, 205, 205)
 }
+
+.bg-red {
+  background-color: rgb(196,22,28);
+}
+
+.bg-smoke {
+  background-color: rgb(236, 236, 236);
+}
+
+.label-white {
+  color: white;
+}
