Refactoring navbar with sub menus

--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -1,71 +1,90 @@
-nav {
+.menu-bar {
     background-color: rgb(89, 108, 114);
+    height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5%;
+
+    position: relative;
 }
 
-ul {
+.menu-bar ul {
     list-style: none;
-    margin: 0;
+    display: flex;
     padding-left: 0;
 }
 
-a {
-    padding-bottom: 3px !important;
+.menu-bar ul li {
+    /* width: 120px; */
+    padding-left: 20px;
+    /* text-align: center; */
+
+    position: relative;
 }
 
-li {
-    color: #fff;
-    display: block;
-    float: left;
-    padding: 1rem;
-    position: relative;
+.menu-bar ul li a {
+    font-size: 17px;
+    color: black;
     text-decoration: none;
-    transition-duration: 0.5s;
-    padding: 0px 0px 0px 15px;
+    padding-bottom: 3px !important;
+    transition: all 0.3s;
 }
 
-.nav-link {
+.fas {
+    float: right;
+    margin-left: 10px;
+    padding-top: 3px;
+}
+
+/* dropdown menu style */
+.dropdown-menu {
+    display: none;
+}
+
+.menu-bar ul li:hover .dropdown-menu {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 100%;
+}
+
+.menu-bar ul li:hover .dropdown-menu ul {
+    display: block;
+    margin: 10px;
+}
+
+.menu-bar ul li:hover .dropdown-menu ul li {
+    width: 100%;
+    padding: 10px;
+}
+
+.dropdown-menu-1 {
+    display: none;
+}
+
+.dropdown-menu ul li:hover .dropdown-menu-1 {
+    background-color: white;
+    display: block;
+    position: absolute;
+    left: 148px;
+    top: 0;
+    border: 0.1px solid var(--bs-border-color-translucent);
+}
+
+.textWhite {
     color: #fff !important;
-    display: inline-block;
-    position: relative;
+}
+
+.textBottomBorder {
     border-bottom: 0.1px solid rgb(126, 139, 144);
 }
 
-
-.textWhite {
-    color: #fff;
-}
-
-.textBlack {
-    color: black;
-}
-
-li:hover {
-    cursor: pointer;
-}
-
-ul li ul {
-    visibility: hidden;
-    opacity: 0;
-    min-width: 5rem;
-    position: absolute;
-    transition: all 0.5s ease;
-    margin-top: 1rem;
-    left: 0;
-    display: none;
-    z-index: 1;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-}
-
-ul li:hover>ul,
-ul li:focus-within>ul,
-/* this is the line we add */
-ul li ul:hover {
-    visibility: visible;
-    opacity: 1;
-    display: block;
-}
-
-ul li ul li {
-    clear: both;
+.dropdown-menu ul {
     width: 100%;
+}
+
+.dropdown-menu-1 ul {
+    width: 150px;
 }
