--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -5,6 +5,7 @@
     padding-top: 90px;
     padding-bottom: 90px;
     background-color: #e1e3eb;
+    min-height: 965px;
 }
 
 .sub-main {
@@ -66,11 +67,11 @@ input {
     padding-top: 20px;
 }
 
-button {
+.button-customized {
     width: 380px;
     height: 50px;
     border-radius: 60px;
-    background-color: #b103fc;
+    background-color: rgb(196,22,28);;
     color: white;
     font-size: 25px;
     border: none;
@@ -83,8 +84,4 @@ button {
 .link {
     font-size: 25px;
     font-weight: 400;
-}
-
-a {
-    color: blue;
 }
